@@ -28,3 +28,4 @@
 202212121207: Fixed bug in disappearing connections.
 202304032220: Testing new type lists for transactions screen
 202304032327: .
+202304041459: Write transactionsLists to folder
